ft--diliver votes button z-index fixed

--- a/components/NavBar/Styles.module.scss
+++ b/components/NavBar/Styles.module.scss
@@ -77,7 +77,7 @@
         border: none;
         background: var(--primary-color);
         color: var(--tertiary-color);    
-        z-index: 200;   
+        // z-index: 200;   
 
     }
     
